--- a/source/stylesheets/modules/icons.scss
+++ b/source/stylesheets/modules/icons.scss
@@ -32,7 +32,7 @@
     transition: transform 2s;
   }
   &.of-swipe {
-    width: 35px;
+    width: 40px;
     margin: 20px auto;
     @media (min-width: 800px) { display: none; }
   }
